--- a/src/presentation/theme/light-theme.css
+++ b/src/presentation/theme/light-theme.css
@@ -6,6 +6,7 @@
   --color-foreground-secondary: var(--color-neutral-500);
 
   --color-border-foreground: var(--color-neutral-200);
+  --color-border-input: var(--color-neutral-300);
 
   --color-button-hover: var(--color-neutral-200);
 }
