--- a/src/presentation/theme/dark-theme.css
+++ b/src/presentation/theme/dark-theme.css
@@ -3,9 +3,9 @@
   .dark :root,
   .dark :host {
     /* Colors - Backgrounds */
-    --color-background: var(--color-secondary);
-    --color-background-secondary: var(--color-secondary);
-    --color-foreground: var(--color-neutral-200);
+    --color-background: var(--color-neutral-900);
+    --color-background-secondary: var(--color-neutral-1000);
+    --color-foreground: var(--color-neutral-50);
 
     --color-border-foreground: color-mix(
       in srgb,
@@ -15,6 +15,12 @@
     --color-border-input: color-mix(
       in srgb,
       var(--color-neutral-600) 50%,
+      transparent
+    );
+
+    --color-progress-background: color-mix(
+      in srgb,
+      var(--color-neutral-300) 15%,
       transparent
     );
 
