--- a/src/presentation/theme/light-theme.css
+++ b/src/presentation/theme/light-theme.css
@@ -8,5 +8,12 @@
   --color-border-foreground: var(--color-neutral-200);
   --color-border-input: var(--color-neutral-300);
 
+  --color-badge-background: var(--color-neutral-400);
+  --color-progress-background: color-mix(
+    in srgb,
+    var(--color-neutral-300) 50%,
+    transparent
+  );
+
   --color-button-hover: var(--color-neutral-200);
 }
